More exploration of how to organize tests. Added module configurations to test source set, added a 'modular' test project for morfologik. Everything compiles just fine (with module path). The problem is in the test task which would have to be provided with the module path similar to the compilation task. Also - didn't decide whether a separate project or just a separate source set is sufficient for the modular tests (I'm guessing a separate sourceset will kill Eclipse any any other IDE that isn't smart enough to split sourcesets into different paths).